Add user edit functionality
